# CPG

./: .gitignore  README.md
src/quad_cpg/: package.xml  setup.cfg  setup.py
src/quad_cpg/launch/: quad_cpg_go1.launch.py
src/quad_cpg/quad_cpg/: gazebo_interface.py  hopf_network.py
src/quad_cpg/quad_cpg/demos/: README.md  plot_cpg_outputs.py
src/quad_cpg/quad_cpg/env/: configs_go1.py
src/unitree_ros2_sim/go1_sim/go1_description/: CMakeLists.txt
src/unitree_ros2_sim/go1_sim/go1_gazebo/: CMakeLists.txt
src/unitree_ros2_sim/ros2_unitree_legged_controller/: CMakeLists.txt
src/unitree_ros2_sim/ros2_unitree_legged_msgs/: CMakeLists.txt
src/unitree_ros2_sim/unitree_guide2/: CMakeLists.txt
